[package]
name = "mandelbrot_video"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26.0.1"
pollster = "0.4.0"
image = "0.25.8"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
anyhow = "1.0.100"
bytemuck = { version = "1.23.2", features = ["derive"] }
flume = "0.11.1"
tokio = "1.47.1"
rayon = "1.11.0"
indicatif = "0.18.0"