[package]
name = "mandelbrot_video"
version = "0.2.0"  # 对应你要推送的v0.2版本
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
image = "0.25"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
wgpu = "26.0.1"
pollster = "0.4"
